--- a/Profile/css/style.css
+++ b/Profile/css/style.css
@@ -1,11 +1,99 @@
 body{
-	width: 50%;
 	margin: auto;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	color: #333333;
+	background-color: #fff;
+}
+
+form {
+	padding-top: 50px;
+}
+#error_message {
+	display: none;
+/*	background: red;*/
+/*	width: 500px;
+*/	height: 30px;
+}
+
+#profile {
+	display: none;
+}
+
+#left-message {
+	position: relative;
+	text-align: center;
+	background: #000 url(../img/bg.jpg) no-repeat center;
+	background-size: cover;
+	width: 50%;
+	float: left;
+	height: 100%;
+}
+
+#left-message h2 {
+	margin: 0;
+    font-family: 'Playfair Display', serif;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 72px;
+}
+
+#left-message h4 {
+    margin-bottom: 6px;
+    display: block;
+    font-family: 'lato', sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #999;
+    letter-spacing: 0.12em;
+}
+
+#left-message header {
+	margin-top: 80px;
+
 
 }
-#error_field {
-	visibility: hidden;
-/*	background: red;*/
-	width: 500px;
-	height: 30px;
+#form_wrapper {
+	position: relative;
+	float: left;
+	padding: 120px 120px 150px 150px;
+
+}
+
+#form_wrapper input {
+	border: none ;
+	height: 10px;
+	font-size: 16px;
+	margin-top: 1em;
+	margin-right: 0.5em;
+	padding: 0.6em 0.1em 1.0em 0;
+	background: transparent;
+    font-family: 'lato', sans-serif;
+    color: #595F6E;
+    border-bottom: 2px solid #333333;
+}
+.secondary-fields {
+	margin-top: 0.5em;
+	font-size: 16px;
+
+}
+.secondary-fields select {
+	font-size: 12px;
+}
+#SecretAnswer {
+	width: 98%;
+}
+
+#SubmitButton {
+	margin-top: 15px;
+	padding: 13px 25px;
+	border: none;
+	color: #fff;
+	display: inline-block;
+	background: #ff5500;
+	font-family: 'lato', sans-serif;
+	text-transform: uppercase;
+	font-size: 14px;
+	letter-spacing: 0.12em;
+	border-radius: 24px;
 }
