--- a/Profile/css/style.css
+++ b/Profile/css/style.css
@@ -6,9 +6,7 @@ body{
 	background-color: #fff;
 }
 
-form {
-	padding-top: 50px;
-}
+
 #error_message {
 	display: none;
 /*	background: red;*/
@@ -16,10 +14,6 @@ form {
 */	height: 30px;
 	background-color: #ef9494;
 	color: #b72c2c;
-}
-
-#profile {
-	display: none;
 }
 
 #left-message {
@@ -35,7 +29,7 @@ form {
 #left-message h2 {
 	margin: 0;
     font-family: 'Playfair Display', serif;
-    font-size: 60px;
+    font-size: 70px;
     font-weight: 400;
     line-height: 72px;
 }
@@ -45,20 +39,22 @@ form {
     display: block;
     font-family: 'lato', sans-serif;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 20px;
     color: #999;
     letter-spacing: 0.12em;
 }
 
 #left-message header {
-	margin-top: 150px;
+	margin-top: 210px;
 
 
 }
 #form_wrapper {
 	position: relative;
 	float: left;
-	padding: 120px 120px 150px 150px;
+	/*padding: 250px 120px 150px 100px;*/
+	margin: 10% 5%;
+	display: inline-block;
 
 }
 
@@ -101,3 +97,70 @@ form {
 	letter-spacing: 0.12em;
 	border-radius: 24px;
 }
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 	100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+
+.modal h2{
+	font-size: 28px;
+	font-weight: bold;
+
+}
+.modal h3 {
+	font-size: 18px;
+	margin: auto;
+	font-weight: bold;
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+}
+
+.modal-box {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; 
+}   
+
+
+.modal-content {
+	width: 250px;
+	margin: 0 auto; 
+	word-wrap: break-word;
+}
+.modal-content span{
+	font-size: 20px;
+	
+
+}
+
+.profileheaders {
+	font-weight: bold;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
